    - Add X2Go KDrive support (wrapper package: x2goserver-x2gokdrive).
    - Add man page for x2gocleansessions.
    - x2goserver/man/man8/x2golistsessions_root.8: Mention --all-servers
      option. (Fixes: #1395).
    - x2goruncommand: Support GNOME-based Ubuntu sessions (via X2Go Kdrive)
      as provided by Ubuntu 18.04 or later.
  * debian/x2goserver.postinst:
    + Drop duplicate sourcing of debconf includes.
    + Add Dutch debconf translation. Thanks to Frans Spiesschaert.
    + Add Russian debconf translation. Thanks to Lev Lamberov.
    + Add Portuguese debconf translation. Thanks to Américo Monteiro.
    + Update German translation.
  * debian/control:
    + Update (LONG_)DESCRIPTION of bin:pkg x2goserver-x2goagent.
  * x2goserver.spec:
    + Update (LONG_)DESCRIPTION of bin:pkg x2goserver-x2goagent.
    + Fix up files section for x2gokdrive (wrong pkg name).

  [ Mihai Moldovan ]
  * New upstream version (4.1.0.4):
    - x2goserver/sbin/x2gocleansessions: add newline before POD block.
    - x2goserver-x2goagent/man/man1/x2goagent.1: add version and date.
    - x2goserver/Makefile: generate man pages from Perl POD.
    - X2Go/Utils.pm: fix missing semicolons.
    - X2Go/Utils.pm: add new is_int subroutine, checking if the provided value
      is an integer.
    - x2goserver/lib: new x2goisint wrapper.
    - x2goserver/lib/x2gois{int,true}: add newlines to (error) output.
    - x2goserver/lib/x2gois{int,true}: add optional warnings.
    - x2goserver/sbin/x2gocleansessions: rework manpage/POD.
    - x2goserver/lib: add new (stub) file x2goupdateoptionsstring to deal with
      options string manipulations. Currently only parsing into an
      intermediate state is supported, the script dumps that state for now.
    - x2goserver/lib/x2goupdateoptionsstring: add function to transform the
      intermediate options string representation back into a string and some
      code that uses this new function.