@@ -1,0 +1,17 @@
+# GNOME sessions in X2Go Server will try to create a color-manager
+# map device on session startup. Let's disable colord support on
+# this host entirely as a workaround.
+#
+# See: https://gitlab.gnome.org/GNOME/gnome-settings-daemon/issues/273
+
+polkit.addRule(function(action, subject) {
+   if (action.id == "org.freedesktop.color-manager.create-device"  ||
+       action.id == "org.freedesktop.color-manager.create-profile" ||
+       action.id == "org.freedesktop.color-manager.delete-device"  ||
+       action.id == "org.freedesktop.color-manager.delete-profile" ||
+       action.id == "org.freedesktop.color-manager.modify-device"  ||
+       action.id == "org.freedesktop.color-manager.modify-profile")
+   {
+      return polkit.Result.NO;
+   }
+});
